<resources>
    <string name="app_name">AppOS</string>
    <string name="appos_logo">AppOS</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="ok">OK</string>
    <string name="esqueci_senha">lembrar senha</string>
    <string name="cadastrar">Cadastrar</string>




    <string name="cadastrar_empresa">Cadastrar Empresa</string>
    <string name="cpf_cnpj">CPF ou CNPJ:</string>
    <string name="nomeempresa">Nome da empresa ou razão social:</string>
    <string name="telefone">Telefone.: </string>
    <string name="endereco">Endereço:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="cep">Cep:</string>
    <string name="estado">Estado:</string>
    <string name="numero">Nº.:</string>
    <string name="cadastrar_senha">Cadastrar Senha</string>

    <string name="cadastro_de_os">Cadastrar Ordem de Serviço</string>
    <string name="num_os">Número da OS.:</string>
    <string name="nome_produto_servico">Nome do produto ou tipo de serviço</string>
    <string name="descricaoservico">Descrição do Serviço:</string>
    <string name="responsaveltecnico">Responsável técnico:</string>
    <string name="idCliente">CPF ou nome do cliente:</string>

    <string name="cadastro_de_cliente">Cadastrar Cliente</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome do Cliente</string>
    <string name="tipo_de_servico">Tipo de serviço.:</string>
    <string name="preencher_numos">N°.: %s</string>
    <string name="atualizar">Atualizar</string>
    <string name="contatar_cliente">Contatar Cliente</string>
    <string name="email">Email:</string>
    <string name="erro_cpf_cnpj">O CPF/CNPJ não pode ser nulo</string>
    <string name="erro_nome_razao">O nome/razão social não pode ficar em branco</string>
    <string name="erro_meio_contato">Informe um número de telefone ou email para contato</string>
    <string name="erro_cep">É obrigatório informar o CEP</string>
    <string name="erro_senha">É necessário cadastrar uma senha</string>
    <string name="erro_confirmar_senha">É necessário confirmar a senha para prosseguir</string>
    <string name="erro_cadastrar_empresa">Erro ao Cadastrar Empresa</string>
    <string name="cadastrado_com_sucesso">Cadastrado com Sucesso</string>
    <string name="empresa_cadastrada_com_sucesso">Empresa cadastrada com sucesso</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="senhas_nao_compativeis">As senhas não são compatíveis. Verifique as senhas e tente novamente.</string>
    <string name="erro_cadastro">Erro ao Cadastrar</string>
    <string name="aviso_cadastro">Aviso ao Cadastrar</string>
    <string name= "cadastrar_ordem">Ordem de Serviço </string>

    <string name="abrir_drawer">Abrir</string>
    <string name="fechar_drawer">Fechar</string>
    <string name="sair">Sair</string>
    <string name="relatar_um_problema">Relatar um problema</string>
    <string name="ainda_nao_concluido">Recurso em desenvolvimento</string>
    <string name="desenvolvendo_recurso">No momento esse recurso não se encontra disponível. Assim que for finalizado, será disponibilizado como uma atualização da loja!</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="cliente_nao_encontrado">Cliente não encontrado</string>
    <string name="cpf_ou_cnpj_cliente">CPF ou CNPJ .: %s</string>
    <string name="nome_cliente">Nome .: %s</string>
    <string name="endereco_cliente">Endereço .:  \n\t\t\t%s</string>
    <string name="atualizar_status_da_os">Atualizar Status da OS</string>
    <string name="selecionar_novo_status">Selecionar novo Status.:</string>
    <string name="descri_o_da_atualiza_o">Descrição da atualização.:</string>
    <string name="selecione_o_status">Selecione o Status.:</string>
    <string name="adapter_nome_s">Nome.: %s</string>


</resources>
