<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".frag.CadastrarEmpresa">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/fragment_cadastrar_empresa_txtCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cadastrar_empresa"
                android:textColor="@color/cinza"
                android:textSize="25sp"
                android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputcpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtCPF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/branco"
                        android:hint="@string/cpf_cnpj"
                         />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputnomeempresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/inputcpf"
                    tools:visibility="visible">


                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtNomeEmpresa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/nomeempresa" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/inputnomeempresa"
                    tools:visibility="visible">


                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputtelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/inputemail"
                    app:layout_constraintTop_toBottomOf="@id/inputemail">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/telefone"
                        />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputcep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/inputtelefone"
                    app:layout_constraintTop_toBottomOf="@id/inputtelefone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtCep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/cep"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputendereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/inputcep"
                    app:layout_constraintTop_toBottomOf="@id/inputcep">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtEndereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/endereco"
                        />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputestado"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/inputendereco"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputendereco">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtEstado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/estado" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputcidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/inputestado"
                    app:layout_constraintTop_toBottomOf="@id/inputendereco">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtCidade"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/cidade" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputbairro"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/inputestado"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputestado">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtBairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/bairro" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputnumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/inputbairro"
                    app:layout_constraintTop_toBottomOf="@id/inputcidade">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_cadastrar_empresa_edtNumResidencia"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:background="@color/branco"
                        android:hint="@string/numero" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <include layout="@layout/dialog_cadastrar_senha"/>
    </LinearLayout>
</ScrollView>