<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.cardview.CircularRevealCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/Widget.MaterialComponents.CardView"
        android:id="@+id/adapter_lista_cliente_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/branco"
        app:strokeWidth="1dp"
        app:strokeColor="@color/cinza_claro"
        android:minHeight="180dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_cliente_lista_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/cpf_ou_cnpj_cliente"
            android:textColor="@color/laranjaPrincipal"
            android:textSize="19sp" />


        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_cliente_lista_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/nome_cliente"
                android:textColor="@color/laranjaPrincipal"
                android:textSize="19sp" />

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_cliente_lista_Telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/telefone"
                android:textColor="@color/laranjaPrincipal"
                android:textSize="19sp" />

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_cliente_lista_endereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/endereco_cliente"
                android:textColor="@color/laranjaPrincipal"
                android:textSize="19sp" />
    </LinearLayout>

</com.google.android.material.circularreveal.cardview.CircularRevealCardView>